// Copyright 2023 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package luci.bisection.config;

option go_package = "go.chromium.org/luci/bisection/proto/config;configpb";

// ProjectConfig is the project-specific configuration data for LUCI Bisection.
message ProjectConfig {
  // Configuration data for compile failure analysis.
  CompileAnalysisConfig compile_analysis_config = 1;
  // Configuration data for test failure analysis.
  TestAnalysisConfig test_analysis_config = 2;
}

// CompileAnalysisConfig is the configuration data for compile failure bisection.
// Next available tag: 6.
message CompileAnalysisConfig {
  // The build config to run compile analysis.
  BuildConfig build_config = 4;
  // Whether we should run culprit verification
  bool culprit_verification_enabled = 1;
  // Whether we should run nthsection analysis
  bool nthsection_enabled = 2;
  // Configuration data for Gerrit integration for compile failures.
  GerritConfig gerrit_config = 3;
  // Only compile failure which satisfies this filter will be ingested.
  FailureIngestionFilter failure_ingestion_filter = 5;
}

// TestAnalysisConfig is the configuration data for test failure bisection.
// Next available tag: 10.
message TestAnalysisConfig {
  reserved 1;
  // The build config to run test analysis.
  BuildConfig build_config = 9;
  // Flag of whether test failure detector is enabled.
  // Usually the flag is on for both dev and prod, but we may want to turn
  // it off for the cases when the bisector is down and we don't want to
  // create tasks when the bisector cannot run (in which case, the bisector
  // will just mark the analysis as "DISABLED").
  // So in prod, if we need to turn the bisector off, we generally should turn
  // the detector off as well.
  bool detector_enabled = 2;
  // Flag of whether test failure bisector is enabled.
  // During the development of the test failure bisection feature, it should
  // be on for dev and off for prod (as we are testing). When everything is
  // up and running, it should be off for dev and on for prod, because we want
  // to save resources (running bisection on dev will be expensive).
  bool bisector_enabled = 3;
  // The maximum number of test analyses to run in a day for each project.
  // It only counts analyses that being created within 24 hours, with status different
  // from "DISABLED" or "UNSUPPORTED".
  // It allows us to slowly roll out bisection without consuming too much
  // swarming capacity.
  uint32 daily_limit = 4;
  // The list of buildbucket buckets that we should not bisect on.
  // For example, "reviver", "try", and "findit".
  // TODO(beining@): deprecating, use failure_ingestion_filter.excluded_buckets instead.
  repeated string excluded_buckets = 5;
  // Configuration data for Gerrit integration for test failures.
  GerritConfig gerrit_config = 6;
  // The list of swarming test task pools that we want to exclude running bisection.
  // For example, we want to exclude the "chromium.tests.gpu" pool (b/301523224)
  // because there are limited resources in the pool.
  // Note: this is not the pools that the builder run, but the swarming test task pool,
  // which contains the bots that actually run the tests on swarming.
  // TODO(beining@): deprecating, use failure_ingestion_filter.excluded_test_pools instead.
  repeated string excluded_test_pools = 7;
  // Only test failure which satisfies this filter will be ingested.
  FailureIngestionFilter failure_ingestion_filter = 8;
}

// FailureIngestionFilter defines filtering rules for failures to be ingested.
// A failure needs to fulfill ALL rules.
message FailureIngestionFilter {
  // The list of buildbucket buckets that we should not bisect on.
  // For example, "reviver", "try", and "findit".
  // Only applicable for test failure analysis.
  repeated string excluded_buckets = 1;
  // The list of swarming test task pools that we want to exclude running bisection.
  // For example, we want to exclude the "chromium.tests.gpu" pool (b/301523224)
  // because there are limited resources in the pool.
  // Note: this is not the pools that the builder run, but the swarming test task pool,
  // which contains the bots that actually run the tests on swarming.
  // Only applicable for test failure analysis.
  repeated string excluded_test_pools = 2;
  // If this is specified, bisection will only run on failures
  // from the builder groups in the list.
  // An empty list means that failures from all builder groups can be ingested.
  // Only applicable for test failure analysis.
  repeated string allowed_builder_groups = 3;
  // The list of builder groups that we should not run bisect on.
  repeated string excluded_builder_groups = 4;
}

// GerritConfig is the configuration data for Gerrit integration
message GerritConfig {
  // Whether Gerrit API actions are enabled
  bool actions_enabled = 1;

  // Settings for revert-related actions
  message RevertActionSettings {
    // Whether the action is enabled
    bool enabled = 1;

    // The maximum number of times the action can be performed per day
    uint32 daily_limit = 2;
  }

  // Settings for creating reverts for culprit CLs
  RevertActionSettings create_revert_settings = 2;

  // Settings for submitting reverts for culprit CLs
  RevertActionSettings submit_revert_settings = 3;

  // Maximum age of a culprit (sec) for its revert to be eligible
  // for the submit action.
  //
  // The age of a culprit is based on the time since the culprit was merged.
  // If a culprit is older than this limit, LUCI Bisection will skip
  // submitting its corresponding revert.
  int64 max_revertible_culprit_age = 4;

  // Settings for culprit actions for nthsection
  message NthSectionSettings {
    // Whether culprit action for nthsection culprit is enabled
    bool enabled = 1;
    // Whether we should perform actions on nthsection culprits even when
    // culprit verification errored
    bool action_when_verification_error = 2;
  }

  NthSectionSettings nthsection_settings = 5;
}

// BuildConfig contains configuration of how we run rerun builds.
message BuildConfig {
  // The buildbucket builder.
  Builder builder = 1;
}

// Builder specifies a buildbucket builder.
message Builder {
  // The name of the project that the builder belongs to.
  string project = 1;
  // The name of the bucket that the builder belongs to.
  string bucket = 2;
  // The name of the builder.
  string builder = 3;
}